--- a/index.html
+++ b/index.html
@@ -9,3 +9,111 @@
     
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ferramenta Interativa de Estudo</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Ferramenta Interativa de Estudo</h1>
+        <p>Aprenda de forma divertida e interativa!</p>
+    </header>
+
+    <section id="quiz-container">
+        <h2>Quiz de Exemplo</h2>
+        <div id="quiz">
+            <p id="question">Qual é a capital do Brasil?</p>
+            <div class="answers">
+                <button class="answer" onclick="checkAnswer('A')">A) Rio de Janeiro</button>
+                <button class="answer" onclick="checkAnswer('B')">B) São Paulo</button>
+                <button class="answer" onclick="checkAnswer('C')">C) Brasília</button>
+                <button class="answer" onclick="checkAnswer('D')">D) Belo Horizonte</button>
+            </div>
+        </div>
+        <div id="feedback"></div>
+    </section>
+
+    <footer>
+        <p>Desenvolvido por [Seu Nome]</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
+2. CSS (Estilo visual)
+/* styles.css */
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    color: #333;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+header {
+    background-color: #4CAF50;
+    color: white;
+    padding: 20px;
+    width: 100%;
+    text-align: center;
+}
+
+h1 {
+    margin: 0;
+}
+
+#quiz-container {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    width: 100%;
+    max-width: 400px;
+}
+
+button {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px;
+    margin: 5px;
+    cursor: pointer;
+    border-radius: 5px;
+    width: 100%;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+footer {
+    margin-top: 30px;
+    font-size: 0.9em;
+    color: #777;
+}
+3. JavaScript (Interatividade)
+// script.js
+
+// Função para verificar a resposta
+function checkAnswer(answer) {
+    const correctAnswer = 'C'; // Resposta correta
+    const feedback = document.getElementById('feedback');
+    
+    if (answer === correctAnswer) {
+        feedback.textContent = 'Resposta Correta! Parabéns!';
+        feedback.style.color = 'green';
+    } else {
+        feedback.textContent = 'Resposta Errada! Tente novamente.';
+        feedback.style.color = 'red';
+    }
+}
